<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GSB</string>
    <string name="start_message">Application GSB</string>
    <string name="start_connection">Veuillez-vous identifier</string>
    <string name="id">Votre matricule</string>
    <string name="passwd">Votre mot de passe</string>
    <string name="validate">Valider</string>
    <string name="reset">Annuler</string>
    <string name="logout">Déconnexion</string>
    <string name="copyr">&#169; 2015 GSB</string>
    <string name="dedicate">Application destinée aux Visiteurs </string>
    <string name="menu_about">A propos</string>
    <string name="menu_cr_list">Vos comptes-rendus</string>
    <string name="menu_add_cr">Saisir un compte-rendu</string>
    <string name="menu_refresh">Rafraichir</string>
    <string name="fullName">//</string>
    <string name="aboutApp">Ici , vous pouvez  :</string>
    <string name="showCR"> > consulter vos compte-rendus</string>
    <string name="addCR"> > saisir un compte-rendu</string>
    <string name="messageNewCR1">Veuillez compléter</string>
    <string name="messageNewCR2">tous les champs ci-dessous</string>
    <string name="praticienList"> Choisissez le praticien :</string>
    <string name="motifList">Selectionnez le motif :</string>
    <string name="changeDate">Changer</string>
    <string name="date">[date]</string>
    <string name="coefconf">Coefficiant de confiance : </string>
    <string name="bilan">Saisissez le bilan </string>
    <string name="labelDate">Date de visite :</string>
    <string name="labelPra">Nom du praticien :</string>
    <string name="detailTilteCR">Détails du compte-rendu</string>
    <string name="numCR">Numéro : </string>
    <string name="dateRedac">Date de rédaction :</string>
    <string name="pra">Praticien : </string>
    <string name="coefConf">Coefficiant de confiance : </string>
    <string name="bilanCR">Bilan : </string>
    <string name="motif">Motif :</string>
    <string name="rapLu">Lecture :</string>
    <string name="cancel">Annuler</string>
    <string name="nom" >Nom :</string>
    <string name="prenom">Prénom :</string>
    <string name="praD">Informations sur le praticien </string>
    <string name="praDetails"> > Voir les infos sur un praticien</string>
    <string name="adresse">Adresse : </string>
    <string name="cp">Code postal :</string>
    <string name="ville">Ville :</string>
    <string name="prefession">Profession :</string>
    <string name="lieu_de_travail">Lieu de travail :</string>
    <string name="coefN">Coefficient de notoriété : </string>
    <string name="next">Suivant</string>
    <string name="Med">Selectionnez les produits :</string>
    <string name="clearList">Vider la liste</string>
    <string name="see">Voir les infos relatives au praticien</string>
    <string  name="prod">Choississez le nombre d\'échantillon \n offert pour chaque produit</string>
</resources>