<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:text="@string/Med"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/select_med"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:radius="25dp"
        android:padding="5dip" />

    <RelativeLayout
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center" >

        <android.support.v7.widget.Space
            android:id="@+id/space1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="onNext"
            android:text="@string/next" />
    </RelativeLayout>

    <Button
        android:id="@+id/bValid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clearList"
        android:text="@string/clearList" />

    <ImageSwitcher
        android:id="@+id/imageSwitcher1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo"
        android:overScrollMode="ifContentScrolls" >
    </ImageSwitcher>

</LinearLayout>