<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="14dp"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:background="@color/Beige" >

        <TextView
            android:id="@+id/tvCR1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:text="@string/messageNewCR1"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCR2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/messageNewCR2"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.00" >

        <Button
            android:id="@+id/changeDate"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/prenomPra"
            android:layout_marginRight="15dp"
            android:onClick="changeDate"
            android:text="@string/changeDate" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="120dp"
            android:layout_height="20dp"
            android:layout_alignBaseline="@+id/changeDate"
            android:layout_alignBottom="@+id/changeDate"
            android:layout_alignLeft="@+id/prenomPra"
            android:layout_marginLeft="14dp"
            android:text="@string/date"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/prenomPra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="left"
            android:labelFor="@+id/etPassword"
            android:text="@string/labelDate"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_marginBottom="5dp" >

        <Spinner
            android:id="@+id/SpinnerPra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/TextView04"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="-7dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:text="@string/praticienList"
            android:textSize="17sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.12" >

        <Spinner
            android:id="@+id/spinnerMotif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/TextView03"
            android:layout_alignParentBottom="true"
            android:background="@android:drawable/btn_dropdown"
             android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:text="@string/motifList"
            android:textSize="17sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp" >

        <EditText
            android:id="@+id/coefConf"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:text="@string/coefconf"
            android:textSize="17sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.04" >

        <EditText
            android:id="@+id/bilanCR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/TextView01"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="21dp"
            android:ems="10"
            android:inputType="textMultiLine|textLongMessage" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/bilan"
            android:textSize="17sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="7sp"
        android:gravity="center" >

        <android.support.v7.widget.Space
            android:id="@+id/space1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/cancel"
             />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/next"
            android:onClick="onNext" />

    </RelativeLayout>

</LinearLayout>

</ScrollView>