<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView1"
         android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="519dp"
    android:layout_marginLeft="10dp"
    android:gravity="center_vertical"
    android:background="@color/white"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/showCR"
        android:textSize="20sp"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="60dp"
        android:contentDescription="GSB LOGO"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/fullName"
        android:textSize="22sp"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFullName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/aboutApp"
        android:textSize="22sp"
        tools:ignore="SmallSp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView3"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="18dp"
            android:text="@string/praDetails"
            android:textSize="20sp"
            tools:ignore="SmallSp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/addCR"
        android:textSize="20sp"
        tools:ignore="SmallSp" />
    
</RelativeLayout>
</ScrollView>