<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Beige"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv3"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ems="10"
                android:text="@string/praD"
                android:textSize="21sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/numPraT"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:text="@string/numCR"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/numPra"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.75"
                android:ems="10"
                android:textSize="21sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/nomPraT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nom"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nomPra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:ems="10"
                android:textSize="21sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/prenom"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/prenomPra"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ems="10"
                android:textSize="21sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout03"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/addPraT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/adresse"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addPra"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.02"
                android:ems="10"
                android:textSize="21sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tb7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/cp"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:textSize="21sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tb9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/ville"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/villePra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:textSize="21sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout07"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tb8"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="@string/coefN"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/coefN"
                android:layout_width="137dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:ems="10"
                android:textSize="21sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="7dp"
                android:layout_toLeftOf="@+id/nomPraT"
                android:text="@string/prefession"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/proPra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tb8"
                android:layout_marginBottom="27dp"
                android:layout_marginLeft="9dp"
                android:ems="10"
                android:textSize="21sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout09"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tb10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="7dp"
                android:layout_toLeftOf="@+id/nomPraT"
                android:text="@string/lieu_de_travail"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tb8"
                android:layout_marginBottom="27dp"
                android:layout_marginLeft="9dp"
                android:ems="10"
                android:textSize="21sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>